@@ -1,3 +1,11 @@
+2004-09-23  Tom Tromey  <tromey@redhat.com>
+
+	Bug 9948.
+	* javax/swing/JDesktopPane.java (LIVE_DRAG_MODE): Now final.
+	(OUTLINE_DRAG_MODE): LIVE_DRAG_MODE.
+	* javax/swing/plaf/basic/BasicSplitPaneUI.java
+	(NON_CONTINUOUS_DIVIDER): Now final.  Initialize.
+
 2004-09-23  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* java/awt/Canvas.java
